--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ APP_URL=http://${HOST}:${PORT}
 
 CACHE_VIEWS=false
 
-APP_KEY=
+APP_KEY=l1nds0n_l1nds0n_
 
 DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
@@ -17,3 +17,6 @@ DB_PASSWORD=
 DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
+
+# 1	l1nds0n	teste@teste	$2a$10$7Mn4YiFkkZcjl8LsG7DiUuWSNdoTM5onUTv3xy4kVWoi5oZlFGqbu	Lindson	1		
+# senha 123456
